--- a/jdzstyle.css
+++ b/jdzstyle.css
@@ -3,8 +3,9 @@
 
 }
 body {
-    background-image: url('./jdzAssets/jdzDog.jpg');
-    background-position: center; 
+    background-image: linear-gradient(rgb(211, 211, 211),rgb(157, 156, 156));
+    background-position: center;
+    height: 120%;
 }
 h1 {
     width: 50%;
@@ -19,11 +20,15 @@ h1 {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+
 }
 #dogFace {
     display: block;
+    width: 75%;
+    height: auto;
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
-    border: 20px solid white;
+    background-image: url('./jdzAssets/jdzDog.jpg');
+
 }
