--- a/jdzstyle.css
+++ b/jdzstyle.css
@@ -1,18 +1,26 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
-
 }
 body {
-    background-image: linear-gradient(rgb(211, 211, 211),rgb(157, 156, 156));
-    background-position: center;
-    height: 120%;
+    padding: 0px;
+    background-image: url('./jdzAssets/jdzDoomFacebg2.png');
+    background-size: 100%;
 }
+
+
+.bodyDiv {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 h1 {
     width: 50%;
     margin: 30px auto 30px;
     text-align: center;
     padding: 1%;
     background-color: white;
+    position: relative;
 }
 
 #doomface {
@@ -20,8 +28,9 @@ h1 {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-
+    position: relative;
 }
+
 #dogFace {
     display: block;
     width: 75%;
@@ -30,5 +39,5 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     background-image: url('./jdzAssets/jdzDog.jpg');
-
+    position: relative;
 }
